@@ -1,3 +1,10 @@
+2009-03-22  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool.c (add_no_files_found_message),
+	(spawn_search_command), (create_search_results_section):
+	* gsearchtool.h: Hide the treeview columns when files
+	are not found. 
+
 2009-03-18  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gsearchtool.c (set_constraint_gconf_boolean): Typo
